# basis-universal-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
basis-universal/: Cargo.toml
basis-universal-sys/: Cargo.toml  build.rs  generate_bindings.sh
basis-universal-sys/src/: encoding_bindings.rs  lib.rs  transcoding_bindings.rs
basis-universal/examples/: benchmark.rs  example.rs
basis-universal/src/: lib.rs
basis-universal/src/encoding/: compressor.rs  compressor_image.rs  compressor_params.rs  encoding_tests.rs  mod.rs
basis-universal/src/transcoding/: enums.rs  mod.rs  transcoder.rs  transcoding_tests.rs
basis-universal/test_assets/: rebuild_assets.sh  rust-logo-etc.basis  rust-logo-uastc.basis
