[package]
name = "basis-universal-sys"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/basis-universal-rs"
homepage = "https://github.com/aclysma/basis-universal-rs"
description = "Bindings for the basis-universal Supercompressed GPU Texture Codec by Binomial"
keywords = ["game", "graphics", "basis", "basis-universal", "universal", "texture", "compression", "mipmaps", "DDS", "KTX", "image", "transcoding", "gpu", "binomial", "supercompressed", "supercompression"]
categories = ["game-development", "game-engines", "graphics", "multimedia", "rendering::engine", "external-ffi-bindings", "compression", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
