[package]
name = "basis-universal"
version = "0.1.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/basis-universal-rs"
homepage = "https://github.com/aclysma/basis-universal-rs"
description = "Bindings for the basis-universal Supercompressed GPU Texture Codec by Binomial"
keywords = ["game", "basis-universal", "texture", "compression", "gpu"]
categories = ["game-development", "graphics", "api-bindings", "compression", "encoding"]

[dependencies]
basis-universal-sys = { version = "0.1.0", path = "../basis-universal-sys" }
lazy_static = "1.4.0"
bitflags = "1.2.1"
basis-universal-wasm = { git = "https://github.com/expenses/basis-universal-rs-wasm", rev = "a240b3c5aaffa2c0a60ce6a150a45a5c3a1c7d07" }
js-sys = "0.3.57"

[dev-dependencies]
image = "0.23.13"
lz4 = "1.23"
